--- a/templates/events/event_detail.html
+++ b/templates/events/event_detail.html
@@ -1,4 +1,5 @@
 {% extends 'events/base.html' %}
+{% load static %}
 
 {% block title %}{{ event.title }}{% endblock %}
 
@@ -9,8 +10,10 @@
 
     <div class="event-header">
         {% if event.image %}
-            <img src="{{ event.image.url }}" class="event-image" alt="Изображение мероприятия">
-        {% endif %}
+    <img src="{{ event.image.url }}" class="event-image" alt="Изображение мероприятия">
+{% else %}
+    <img src="{% static 'images/default_event.jpg' %}" class="event-image" alt="Нет изображения">
+{% endif %}
         <div class="event-meta-block">
             <h2 class="event-title">{{ event.title }}</h2>
             <div class="event-description-box">
@@ -20,6 +23,13 @@
 
             <div class="event-meta">
                 <div class="card-line"><i data-lucide="map-pin" class="icon"></i> {{ event.location }}</div>
+                <div class="card-line"><i data-lucide="credit-card" class="icon"></i>
+                    {% if event.price > 0 %}
+                        {{ event.price }} ₽
+                    {% else %}
+                        Бесплатно
+                    {% endif %}
+                </div>
                 {% if event.registration_closed %}
                     <span class="badge badge-red">Регистрация закрыта</span>
                 {% elif event.start_time < now %}
@@ -88,10 +98,16 @@
                         <button type="submit" class="btn btn-outline btn-sm mt-2">Отменить запись</button>
                     </form>
                 {% else %}
+                    {% if event.price > 0 %}
+                    <form method="get" action="{% url 'event-payment' event.id %}">
+                        <button type="submit" class="btn btn-green btn-sm">Перейти к оплате</button>
+                    </form>
+                {% else %}
                     <form method="post" action="{% url 'event-register' event.id %}">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-green btn-sm">Записаться</button>
                     </form>
+                {% endif %}
                 {% endif %}
             {% else %}
                 <div class="warning-box mt-2">
