Диплом написан, гружу на хостинг

--- a/templates/events/event_bonus_tasks.html
+++ b/templates/events/event_bonus_tasks.html
@@ -38,7 +38,7 @@
                             <img src="{{ task|generate_task_qr }}" alt="QR" style="max-height: 80px; margin-top: 5px;">
                         {% endif %}
                     </td>
-                    <td>{{ task.reward }} ₽</td>
+                    <td>{{ task.reward }} Б</td>
                     <td>
                         {% if task.is_active %}
                             <span class="badge badge-green">Активно</span>
