--- a/templates/users/bonus_task_form_user.html
+++ b/templates/users/bonus_task_form_user.html
@@ -29,7 +29,7 @@
 
     <div class="form-group-floating">
         <input type="number" class="input" placeholder=" " id="id_reward" name="reward" value="{{ form.reward.value|default_if_none:'' }}" min="1">
-        <label for="id_reward">Награда (₽)</label>
+        <label for="id_reward">Награда (Б)</label>
     </div>
 
     <div class="form-group-floating">
