--- a/templates/users/bonus_task_public.html
+++ b/templates/users/bonus_task_public.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h2 class="mb-3">{{ task.name }}</h2>
 <p>{{ task.description|default:"Описание отсутствует." }}</p>
-<p><strong>Награда:</strong> {{ task.reward }} ₽</p>
+<p><strong>Награда:</strong> {{ task.reward }} Б</p>
 
 {% if already_done %}
     <div class="alert alert-success">
